Sat Aug 23 10:32:33 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportTMGGame): handle cases where the TMG file says "wins
	1 point" but where the cube value is 2 or more. Typically the last game 	of a match.
	(reported by Albert Silver)
	* import.c (ImportTMGGame): handle small typo in Jim's commit :-)

Fri Aug 22 15:01:19 GMT Jim Segrave <jes@jes-2.demon.nl>

	* import.c - add out of time type 22 for .tmg imports
	* gnubg.c, play.c wrap pwBoard and pwBoard->data with tests
	  for fX, to prevent text mode core dumps
	* board3d/misc3d.c - fix typos
	
Thu Aug 21 23:18:40 2003  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, configure.in: add texture directory.

Thu Aug 21 20:25:51 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkcube.c (OutputPercentsTable): show headers on 
	gwc's.
	(contributed by Rob Konigsberg)
	* gnubg.c: fix typo in "set beavers" command
	(reported by Chris D. Yep)

Thu Aug 21 18:15:11 2003  Joern Thyssen  <jth@gnubg.org>

	* evalc. (DumpPosition): ensure "eval" reports cubeless money
	equituies rather than cubeless equity.
	(reported by Chris D. Yep)

Thu Aug 21 07:16:42 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkgame.c: Fix manually setting skill to 'good'.

Wed Aug 20 19:20:51 2003  Joern Thyssen  <jth@gnubg.org>

	Restore abs. ratings using the formulae provided by
	Kees van den Doel.

	* gnubg.c: new command "set ratingoffset .."
	* gnubg.c (CommandSaveSettings): save rating offset.
	* set.c (CommandSetRatingOffset): new function.
        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show abs. rating.
	* analysis (absoluteFIBSRating): use formulae provided by Kees.

Mon Aug 18 19:41:07 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkrace.c: bug fix: race theory window didn't even fit on 1024x768

Mon Aug 18 18:54:36 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkbearoff.c (ToggleWho, BearoffSet): remove debug printf.
	(reported by Oeystein)
