@@ -661,6 +661,7 @@ extern void CommandAccept( char * ),
     CommandDatabaseTrain( char * ),
     CommandDatabaseVerify( char * ),
     CommandDecline( char * ),
+    CommandDiceRolls( char * ),
     CommandDouble( char * ),
     CommandDrop( char * ),
     CommandEval( char * ),
