@@ -1,3 +1,8 @@
+Sat Aug 23 17:31:30 Jim Segrave <jes@jes-2.demon.nl>
+
+	* backgammon.h, gnubg.c add dicerolls nnn command to output list
+	  of rolls to stdout.
+	
 Sat Aug 23 10:32:33 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* import.c (ImportTMGGame): handle cases where the TMG file says "wins
